<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="always"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:layout_weight="9">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/sign_in_asso_radio"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:maxWidth="250dp"
                    android:text="@string/sign_in_asso_radio"
                    android:layout_gravity="left"
                    android:checked="false" />

                <RadioButton
                    android:id="@+id/sign_in_user_radio"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/sign_in_user_radio"
                    android:checked="true"
                    android:maxWidth="250dp" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:hint="@string/sign_in_asso_name"
                    android:id="@+id/sign_in_asso_name"
                    android:visibility="gone" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:hint="@string/sign_in_login"
                    android:id="@+id/sign_in_login" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_password"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/sign_in_password" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/sign_in_password_confirm"
                    android:ems="10"
                    android:id="@+id/sign_in_password_confirm" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/sign_in_mail"
                    android:ems="10"
                    android:id="@+id/sign_in_mail" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/sign_in_address"
                    android:ems="10"
                    android:id="@+id/sign_in_address" />

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/sign_in_code_postal"
                    android:ems="10"
                    android:id="@+id/sign_in_code_postal"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:inputType="text"
                    android:hint="@string/sign_in_city"
                    android:ems="10"
                    android:id="@+id/sign_in_city"/>
                </LinearLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/sign_in_phone"
                    android:ems="10"
                    android:id="@+id/sign_in_phone" />

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/sign_in_select_categ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_action_new" />

                    <TextView
                        android:id="@+id/sign_in_select_categ_text"
                        android:gravity="center|left"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sign_in_categorie_choice"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <TextView
                    android:id="@+id/sign_in_number_categorie"
                    android:gravity="center|left"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_number_categorie"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/sign_in_categorie_symbol"
                    android:layout_width="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_height="wrap_content"></TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="bottom|right"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_validate"
            android:ems="10"
            android:id="@+id/sign_in_validate"
            android:layout_gravity="bottom" />
    </LinearLayout>
</LinearLayout>