<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="always"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:layout_weight="9">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp">

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/association_creation_evenement_titre"
                    android:ems="10"
                    android:id="@+id/association_creation_evenement_titre" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/association_creation_evenement_lieu"
                        android:ems="10"
                        android:id="@+id/association_creation_evenement_lieu"
                        android:layout_weight="9"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/association_creation_evenement_lieu_bouton"
                        android:background="@drawable/ic_action_place" />
                </LinearLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/association_creation_evenement_lieu_asso"
                    android:id="@+id/association_creation_evenement_lieu_asso" />

                <TextView
                    android:gravity="center|left"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/association_creation_evenement_du"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0dp"
                        android:id="@+id/association_creation_evenement_spinner_du"
                        android:layout_height="wrap_content"
                        android:text="@string/association_creation_evenement_choix_date"
                        style="?android:attr/spinnerStyle"
                        android:layout_weight="7"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/association_creation_evenement_spinner_du_hour"
                        android:layout_height="wrap_content"
                        android:text="@string/association_creation_evenement_choix_hour"
                        style="?android:attr/spinnerStyle"
                        android:layout_weight="3"/>
                </LinearLayout>

                <TextView
                    android:gravity="center|left"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/association_creation_evenement_au"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0dp"
                        android:text="@string/association_creation_evenement_choix_date"
                        android:id="@+id/association_creation_evenement_spinner_au"
                        android:layout_height="wrap_content"
                        style="?android:attr/spinnerStyle"
                        android:layout_weight="7"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/association_creation_evenement_spinner_au_hour"
                        android:layout_height="wrap_content"
                        android:text="@string/association_creation_evenement_choix_hour"
                        style="?android:attr/spinnerStyle"
                        android:layout_weight="3"/>
                </LinearLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/association_creation_evenement_journee_entiere"
                    android:id="@+id/association_creation_evenement_journee_entiere" />

                <TextView
                    android:gravity="center|left"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/association_creation_evenement_frequence"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:layout_width="match_parent"
                    android:id="@+id/association_creation_evenement_spinner_frequence"
                    android:layout_height="wrap_content"
                    android:entries="@array/frequence_array" />

                <TextView
                    android:gravity="center|left"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/association_creation_evenement_categorie_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/association_creation_evenement_categorie_selection"
                    android:id="@+id/association_creation_evenement_categorie_selection" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/association_creation_evenement_categorie_asso"
                    android:id="@+id/association_creation_evenement_categorie_asso" />

                <EditText
                    android:layout_marginTop="30dp"
                    android:id="@+id/association_creation_evenement_descriptif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:hint="@string/association_creation_evenement_descriptif"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:maxLength="250"
                    android:scrollHorizontally="false" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="bottom|right"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/association_creation_evenement_valider"
            android:ems="10"
            android:id="@+id/activity_critere_etape_recherche"
            android:layout_gravity="bottom" />
    </LinearLayout>
</LinearLayout>