<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_critere_etape_recherche_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context="com.assos.activity.CritereEtapeRechercheActivity"
        tools:ignore="MergeRootFrame"
        android:layout_weight="8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_back"
            android:id="@+id/activity_critere_etape_recherche_back"
            android:text="@string/activity_critere_etape_recherche_back"
            android:layout_gravity="bottom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/activity_critere_etape_recherche_next"
            android:drawableRight="@drawable/ic_action_forward"
            android:id="@+id/activity_critere_etape_recherche_next"
            android:layout_gravity="bottom|right" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:text="@string/activity_critere_etape_recherche_finish"
                android:drawableRight="@drawable/ic_action_forward"
                android:id="@+id/activity_critere_etape_recherche_finish"
                android:layout_gravity="bottom|right" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>